in the html file, moved the second section's title's div element outside of class=second. This prevents the title from being changed by css of class=second. in the css file, aligned the title, boxes, and subtext to the center for the second section. also, set a max width for subtext so it doesn't overflow past the boxes.

--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,16 @@ button {
 }
 
 /* Second section */
+.second {
+    display: flex;
+    justify-content: center;
+    gap: 75px;
+    margin-bottom: 100px;
+}
+
 .box {
-    width: 100px;
-    height: 100px;
+    width: 125px;
+    height: 125px;
     border: 3px solid rgb(0, 98, 255);
     border-radius: 6px;
 }
@@ -90,6 +97,18 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    text-align: center;
+    margin: 50px;
 }
 
+
+.subtext {
+    max-width: 130px;
+    text-align: center;
+}
+
+
+
+
+/* Third section */
 
